--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "nodemon": "^1.18.9"
   },
+  "nodemonConfig": {        
+    "ignore": ["data/products.json"]  
+  }, 
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
