--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "devDependencies": {
     "nodemon": "^1.18.9"
   },
-  "nodemonConfig": {        
-    "ignore": ["data/products.json"]  
-  }, 
+  "nodemonConfig": {
+    "ignore": [
+      "data/products.json"
+    ]
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "mysql2": "^2.1.0",
     "pug": "^2.0.3"
   }
 }
