--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "mysql2": "^2.1.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "sequelize": "^5.21.3"
   }
 }
