--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "mongodb": "^3.5.2",
     "mysql2": "^2.1.0",
     "pug": "^2.0.3",
     "sequelize": "^5.21.3",
